More fixes to command-line quirks on Windows